<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DotaScoop</string>
    <string name="activity_top_matches">Top Matches</string>
    <string name="activity_leaderboards">Leaderboards</string>
    <string name="activity_heroes">Heroes</string>
    <string name="activity_items">Items</string>
    <string name="activity_patches">Patches</string>
    <string name="info_patches">from Liquipedia</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About</string>

    <string name="team_radiant">Radiant</string>
    <string name="team_dire">Dire</string>
    <string name="average_mmr">%d Avg. MMR</string>
    <string name="gold_advantage">+%1$d.%2$dk</string>
    <string name="elapsed_time">%1$d:%2$d</string>
    <string name="elapsed_time_corrected_sec">%1$d:0%2$d</string>
    <string name="spectate_command">Spectate command: watch_server %d</string>
    <string name="spectators">Spectators: %d</string>
    <string name="opendota">OpenDota</string>
    <string name="dotabuff">Dotabuff</string>
    <string name="title_info_top_matches">Navigating Top Matches</string>
    <string name="info_top_matches0">
        This is an overview of top tournament and ranked matches currently being played (Live tab)
        and recently finished (Recent tab).
    </string>
    <string name="info_top_matches1">Swipe left and right to switch between live and recent matches
    </string>
    <string name="info_top_matches2">Swipe down to refresh the according list</string>
    <string name="info_top_matches3">Click once on a match to show or hide a detailed match view
    </string>
    <string name="info_top_matches4">
        Press and hold on a ranked match to switch between pro players\' official names (highlighted
        in yellow) and current Steam names
    </string>
    <string name="info_top_matches5">
        Tournament matches show the pro teams\' names instead of \"Radiant\" and \"Dire\"
    </string>
    <string name="info_top_matches6">Live ranked matches are sorted by average MMR</string>
    <string name="info_top_matches7">
        Recent matches are sorted by time finished (most recent at the top of the list)
    </string>
    <string name="info_top_matches8">
        To spectate a live match, find it in the \"Watch\" tab in your Dota 2 client. Alternatively,
        type the command given in the detailed match view of a live match into your Dota 2 console
        and press Enter.
    </string>

    <string name="region_americas">Americas</string>
    <string name="region_europe">Europe</string>
    <string name="region_se_asia">SE Asia</string>
    <string name="region_china">China</string>

    <string name="pref_start_screen">Start screen</string>
    <string name="pref_start_screen_summary">The screen to show when the app starts</string>
    <string name="pref_expand_matches">Expand matches</string>
    <string name="pref_expand_matches_summary">
        If enabled, entries in Top Matches are expanded by default
    </string>
    <string name="pref_default_leaderboard">Default leaderboard</string>
    <string name="pref_default_leaderboard_summary">
        The leaderboard to show when entering Leaderboards
    </string>

    <string name="title_about">About us</string>
    <string name="paragraph_about0">
        This app is being developed and maintained by a small group of amateur and professional
        developers. We came together through a post on
        <a href="https://reddit.com/r/dota2/">/r/dota2</a>.
        You can follow the development and see the whole source code
        <a href="https://github.com/Rhacco/DotaScoop/">here</a>.
    </string>
    <string name="paragraph_about1">
        We started this project in the hopes of learning more about Android development and
        providing the Dota 2 community with some convenient features that we had been missing
        before. It has been quite a journey already and we are still looking to learn more by
        implementing new things.
    </string>
    <string name="paragraph_about2">
        The current state of the app is not the final result of this project. If you have any
        suggestions or bug reports, please let us know
        <a href="https://github.com/Rhacco/DotaScoop/issues">here</a>
        by creating a new issue.
    </string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="disclaimer">
        Dota 2 is a registered trademark of Valve Corporation. This app is not affiliated with Valve
        Corporation in any way. All game images, names and other game data is property of Valve
        Corporation.
    </string>

    <string name="error_permission_network_state">
        App needs permission to access the current network state!
    </string>
    <string name="error_permission_internet">App needs permission to connect to the internet!
    </string>
    <string name="error_no_internet">Network error. Please check your internet connection</string>

    <string name="title_search">Search</string>
    <string name="search_hint_top_matches">Find player/team/hero</string>
    <string name="search_hint_leaderboards">Find player/team/rank</string>
    <string name="search_hint_heroes">Find hero/attribute/role</string>
    <string name="search_hint_items">Find item</string>
    <string name="dialog_ok">OK</string>
    <string name="description_open_drawer">Open Menu</string>
    <string name="description_close_drawer">Close Menu</string>
    <string name="sign_bullet_point">\u2022</string>
    <string name="sign_plus">\u002B</string>
    <string name="sign_minus">"\u2212"</string>
    <string name="log_target_debug">dotascoop.Debug</string>
</resources>