<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_about"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/paragraph0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="@dimen/margin_paragraph"
            android:text="@string/paragraph_about0"/>
        <TextView
            android:id="@+id/paragraph1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paragraph0"
            android:layout_marginTop="@dimen/margin_paragraph"
            android:text="@string/paragraph_about1"/>
        <TextView
            android:id="@+id/paragraph2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paragraph1"
            android:layout_marginTop="@dimen/margin_paragraph"
            android:text="@string/paragraph_about2"/>
    </RelativeLayout>
    <include layout="@layout/navigation_drawer"/>
</android.support.v4.widget.DrawerLayout>